--- a/GradeBook/GradeBook/MVVM/Views/StatisticView.xaml
+++ b/GradeBook/GradeBook/MVVM/Views/StatisticView.xaml
@@ -1,12 +1,13 @@
-﻿<UserControl x:Class="GradeBook.Views.UserControl1"
+﻿<UserControl x:Class="GradeBook.MVVM.Views.StatisticView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:GradeBook.Views"
+             xmlns:local="clr-namespace:GradeBook.MVVM.Views"
+             xmlns:viewModels="clr-namespace:GradeBook.MVVM.ViewModel"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <Button>lskdjfkljsa</Button>
+        <Label>Statistic</Label>
     </Grid>
 </UserControl>
