--- a/GradeBook/GradeBook/MainWindow.xaml
+++ b/GradeBook/GradeBook/MainWindow.xaml
@@ -4,20 +4,73 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:GradeBook"
-             xmlns:views="clr-namespace:GradeBook.Views"
+             xmlns:views="clr-namespace:GradeBook.MVVM.Views"
+             xmlns:viewModels="clr-namespace:GradeBook.MVVM.ViewModel"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <StackPanel>
+    <Window.Resources>
+        <DataTemplate DataType="{x:Type viewModels:RatingViewModel}">
+            <views:RatingView/>
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type viewModels:StudentsViewModel}">
+            <views:StudentsView/>
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type viewModels:GradingViewModel}">
+            <views:GradingView/>
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type viewModels:StatisticViewModel}">
+            <views:StatisticView/>
+        </DataTemplate>
+    </Window.Resources>
+    <Window.DataContext>
+        <viewModels:MainWindowViewModel/>
+    </Window.DataContext>
+    <WrapPanel>
         <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="2*"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="2*"/>
+                <ColumnDefinition Width="Auto"/>            
             </Grid.ColumnDefinitions>
-            <views:UserControl1 Grid.Row="1" Grid.Column="1"></views:UserControl1>
+            
+            <Button Grid.Row="0"
+                    Content="Rating"
+                    Command="{Binding GotoRatingViewCommand}"
+                    HorizontalAlignment="Center"
+                    Margin="10,10,0,0"
+                    VerticalAlignment="Center"
+                    Width="75"/>
+
+            <Button Grid.Row="1"
+                    Content="Students"
+                    Command="{Binding GotoStudentsViewCommand}"
+                    HorizontalAlignment="Center"
+                    Margin="10,10,0,0"
+                    VerticalAlignment="Center"
+                    Width="75"/>
+
+            <Button Grid.Row="2"
+                    Content="Grading"
+                    Command="{Binding GotoGradingViewCommand}"
+                    HorizontalAlignment="Center"
+                    Margin="10,10,0,0"
+                    VerticalAlignment="Center"
+                    Width="75"/>
+
+            <Button Grid.Row="3"
+                    Content="Statistic"
+                    Command="{Binding GotoStatisticViewCommand}"
+                    HorizontalAlignment="Center"
+                    Margin="10,10,0,0"
+                    VerticalAlignment="Center"
+                    Width="75"/>
         </Grid>
-    </StackPanel>
+        <Canvas>
+            <ContentControl Content="{Binding CurrentView}"/>
+        </Canvas>
+    </WrapPanel>
 </Window>
