--- a/GradeBook/GradeBook/MVVM/Views/RatingView.xaml
+++ b/GradeBook/GradeBook/MVVM/Views/RatingView.xaml
@@ -10,7 +10,7 @@
     <UserControl.DataContext>
         <viewModels:RatingViewModel/>
     </UserControl.DataContext>
-    <WrapPanel>
+    <StackPanel>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -26,34 +26,60 @@
                 Height="Auto"
                 Width="100"
                 Grid.Row="0"
-                Grid.Column="0"/>
-        <Button Command="{Binding RemoveProblemCommand}"
+                Grid.Column="0"
+                Margin="10,10,10,10"/>
+            <Button Command="{Binding RemoveProblemCommand}"
                 Content="Remove Problem"
                 Height="Auto"
                 Width="100"
                 Grid.Row="0"
-                Grid.Column="1"/>
-       
-    </Grid>
-        <DataGrid ItemsSource="{Binding Problems, Mode=TwoWay}"
-                  AutoGenerateColumns="False"
-                  CanUserAddRows="False"
-                  >
-            <DataGrid.Columns>
-                <DataGridTextColumn Header="Problem"/>
-                <DataGridTemplateColumn Header="Points for Problem">
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <TextBox Text="{Binding PointsForProblem, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"/>
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                </DataGridTemplateColumn>
-            </DataGrid.Columns>
-        </DataGrid>
-
-        <Label>total points</Label>
-        <TextBox Text="{Binding TotalPoints}"
-                 IsReadOnly="True"/>
-    </WrapPanel>
+                Grid.Column="1"
+                Margin="0,10,10,10"/>
+        </Grid>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+            <DataGrid ItemsSource="{Binding Problems, Mode=TwoWay}"
+                      CanUserAddRows="False"
+                      Margin="10,10,47,10">
+            </DataGrid>
+            <Button Content="Calculate Rating"
+                    Command="{Binding CalculateRatingCommand}"
+                    Grid.Row="1"
+                    Margin="10,10,10,10"/>
+            <Grid Grid.Row="2">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+                <Label Content="Total Points"
+                       Grid.Row="0"
+                       Grid.Column="0"
+                       Margin="10,10,10,10"/>
+                <TextBlock Text="{Binding TotalPoints}"
+                           IsEnabled="False"
+                           Grid.Row="0"
+                           Grid.Column="1"
+                           Margin="50,15,10,10"/>
+                <DataGrid ItemsSource="{Binding GradeRatings, Mode=TwoWay}"
+                          CanUserAddRows="False"
+                          Margin="10,10,10,10"
+                          Grid.Row="1"
+                          Grid.ColumnSpan="2">
+                </DataGrid>
+            </Grid>
+        </Grid>
+        
+    </StackPanel>
 
 </UserControl>
