--- a/GradeBook/GradeBook/MVVM/Views/RatingView.xaml
+++ b/GradeBook/GradeBook/MVVM/Views/RatingView.xaml
@@ -10,31 +10,29 @@
     <UserControl.DataContext>
         <viewModels:RatingViewModel/>
     </UserControl.DataContext>
-    <StackPanel>
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="Auto"/>
-        </Grid.ColumnDefinitions>
-        <Button Command="{Binding AddProblemCommand}"
-                Content="Add Problem"
-                Height="Auto"
-                Width="100"
-                Grid.Row="0"
-                Grid.Column="0"
-                Margin="10,10,10,10"/>
+    <StackPanel Margin="0,0,431,0">
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>                
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+            <Button Command="{Binding AddProblemCommand}"
+                    Content="Add Problem"
+                    Height="Auto"
+                    Width="100"
+                    Grid.Row="0"
+                    Grid.Column="0"
+                    Margin="10,10,10,10"/>
             <Button Command="{Binding RemoveProblemCommand}"
-                Content="Remove Problem"
-                Height="Auto"
-                Width="100"
-                Grid.Row="0"
-                Grid.Column="1"
-                Margin="0,10,10,10"/>
+                    Content="Remove Problem"
+                    Height="Auto"
+                    Width="100"
+                    Grid.Row="0"
+                    Grid.Column="1"
+                    Margin="0,10,10,10"/>
         </Grid>
         <Grid>
             <Grid.RowDefinitions>
@@ -44,10 +42,11 @@
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
             <DataGrid ItemsSource="{Binding Problems, Mode=TwoWay}"
                       CanUserAddRows="False"
-                      Margin="10,10,47,10">
+                      Margin="10,10,171,10">                
             </DataGrid>
             <Button Content="Calculate Rating"
                     Command="{Binding CalculateRatingCommand}"
@@ -57,8 +56,10 @@
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
@@ -75,11 +76,16 @@
                           CanUserAddRows="False"
                           Margin="10,10,10,10"
                           Grid.Row="1"
-                          Grid.ColumnSpan="2">
+                          Grid.ColumnSpan="2">                    
                 </DataGrid>
+                <Button Content="Save Rating"
+                        Command="{Binding SaveRatingCommand}"
+                        Height="Auto"
+                        Width="100"
+                        Grid.Row="2"
+                        Grid.Column="2"
+                        Margin="10,10,10,10"/>
             </Grid>
-        </Grid>
-        
+        </Grid>        
     </StackPanel>
-
 </UserControl>
