--- a/GradeBook/GradeBook/MVVM/Views/RatingView.xaml
+++ b/GradeBook/GradeBook/MVVM/Views/RatingView.xaml
@@ -11,27 +11,34 @@
         <viewModels:RatingViewModel/>
     </UserControl.DataContext>
     <StackPanel Margin="0,0,431,0">
-        <Grid>
+        <Grid Margin="0,0,-94,0">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>                
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
+            <TextBox Text="{Binding ExamName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                     Grid.Column="0"
+                     Grid.Row="0"
+                     Height="Auto"
+                     Width="200"
+                     Margin="10,10,10,10"/>
             <Button Command="{Binding AddProblemCommand}"
                     Content="Add Problem"
                     Height="Auto"
                     Width="100"
                     Grid.Row="0"
-                    Grid.Column="0"
-                    Margin="10,10,10,10"/>
+                    Grid.Column="1"
+                    Margin="0,10,10,10"/>
             <Button Command="{Binding RemoveProblemCommand}"
                     Content="Remove Problem"
                     Height="Auto"
                     Width="100"
                     Grid.Row="0"
-                    Grid.Column="1"
+                    Grid.Column="2"
                     Margin="0,10,10,10"/>
         </Grid>
         <Grid>
@@ -44,7 +51,7 @@
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
-            <DataGrid ItemsSource="{Binding Problems, Mode=TwoWay}"
+            <DataGrid ItemsSource="{Binding Problems, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                       CanUserAddRows="False"
                       Margin="10,10,171,10">                
             </DataGrid>
@@ -67,12 +74,12 @@
                        Grid.Row="0"
                        Grid.Column="0"
                        Margin="10,10,10,10"/>
-                <TextBlock Text="{Binding TotalPoints}"
+                <TextBlock Text="{Binding TotalPoints, UpdateSourceTrigger=PropertyChanged}"
                            IsEnabled="False"
                            Grid.Row="0"
                            Grid.Column="1"
                            Margin="50,15,10,10"/>
-                <DataGrid ItemsSource="{Binding GradeRatings, Mode=TwoWay}"
+                <DataGrid ItemsSource="{Binding GradeRatings, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                           CanUserAddRows="False"
                           Margin="10,10,10,10"
                           Grid.Row="1"
@@ -80,6 +87,7 @@
                 </DataGrid>
                 <Button Content="Save Rating"
                         Command="{Binding SaveRatingCommand}"
+                        IsEnabled="{Binding SaveRatingsEnabled}"
                         Height="Auto"
                         Width="100"
                         Grid.Row="2"
