--- a/GradeBook/GradeBook.Wpf/MVVM/Views/GradingView.xaml
+++ b/GradeBook/GradeBook.Wpf/MVVM/Views/GradingView.xaml
@@ -7,7 +7,45 @@
              xmlns:viewModels="clr-namespace:GradeBook.Wpf.MVVM.ViewModel"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    <UserControl.DataContext>
+        <viewModels:GradingViewModel/>
+    </UserControl.DataContext>
     <Grid>
-        <Label>Grading</Label>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto"/>
+        </Grid.ColumnDefinitions>
+        <Button Content="Get Grading Form"
+                Command="{Binding GetGradingFormCommand}"
+                Height="30"
+                Width="100"
+                Grid.Row="0"
+                Grid.Column="0"
+                Margin="5,5,0,0"/>
+        <DataGrid ItemsSource="{Binding Gradings, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                  Margin="5,5,0,0"
+                  Grid.Row="1"
+                  Grid.Column="0"/>
+        <Button Content="Calculate Exam Grading"
+                Command="{Binding CalculateExamGradingCommand}"
+                Grid.Row="2"
+                Grid.Column="0"
+                Margin="5,5,0,0"
+                Height="30"
+                Width="Auto"
+                IsEnabled="{Binding CalculateExamGradingEnabled}"/>
+        <Button Content="Save Grading"
+                Command="{Binding SaveGradingCommand}"
+                Grid.Row="3"
+                Grid.Column="0"
+                Height="30"
+                Width="100"
+                Margin="5,5,0,0"
+                IsEnabled="{Binding SaveGradingEnabled}"/>
     </Grid>
 </UserControl>
