Changed TextBox back to TextBlock

--- a/GradeBook/GradeBook.Wpf/MVVM/Views/GradingView.xaml
+++ b/GradeBook/GradeBook.Wpf/MVVM/Views/GradingView.xaml
@@ -64,7 +64,7 @@
                                                         <ItemsControl.ItemTemplate>
                                                             <DataTemplate>
                                                                 <Border Width="70">
-                                                                    <TextBox Text="{Binding}"
+                                                                    <TextBlock Text="{Binding}"
                                                                                TextAlignment="Center"/>
                                                                 </Border>
                                                             </DataTemplate>
