--- a/GradeBook/GradeBook.Wpf/MVVM/Views/GradingView.xaml
+++ b/GradeBook/GradeBook.Wpf/MVVM/Views/GradingView.xaml
@@ -4,10 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:GradeBook.Wpf.MVVM.Views"
-             xmlns:viewModels="clr-namespace:GradeBook.Wpf.MVVM.ViewModel"
-             xmlns:primitives="clr-namespace:System.Windows.Controls.Primitives;assembly=System.Windows.Controls.Data"
-             xmlns:sdk="http://schemas.microsoft.com/winfx/2006/xaml/presentation/sdk"
-             xmlns:navigation="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls.Navigation"
+             xmlns:viewModels="clr-namespace:GradeBook.Wpf.MVVM.ViewModel"             
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.DataContext>
@@ -15,6 +12,7 @@
     </UserControl.DataContext>
     <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
@@ -41,7 +39,8 @@
                               AutoGenerateColumns="False">
                         <DataGrid.Columns>
                             <DataGridTextColumn Binding="{Binding MatriculationNumber}"
-                                                Header="Matriculation Number"/>
+                                                Header="Matriculation Number"
+                                                IsReadOnly="True"/>
                             <DataGridTemplateColumn>
                                 <DataGridTemplateColumn.HeaderStyle>
                                     <Style TargetType="DataGridColumnHeader">
@@ -77,7 +76,7 @@
                                 </DataGridTemplateColumn.HeaderStyle>
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
-                                        <ItemsControl ItemsSource="{Binding PointsPerProblem}">
+                                        <ItemsControl ItemsSource="{Binding PointsPerProblems, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
                                             <ItemsControl.ItemsPanel>
                                                 <ItemsPanelTemplate>
                                                     <StackPanel Orientation="Horizontal"/>
@@ -86,8 +85,8 @@
                                             <ItemsControl.ItemTemplate>
                                                 <DataTemplate>
                                                     <Border Width="70">
-                                                        <TextBox Text="{Binding}"
-                                                                   TextAlignment="Center"/>
+                                                        <TextBox Text="{Binding Path=DoubleValue, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                                                 TextAlignment="Center"/>                                                        
                                                     </Border>
                                                 </DataTemplate>
                                             </ItemsControl.ItemTemplate>
@@ -96,9 +95,11 @@
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
                             <DataGridTextColumn Binding="{Binding Grade}"
-                                                Header="Grade"/>
+                                                Header="Grade"
+                                                IsReadOnly="True"/>
                             <DataGridTextColumn Binding="{Binding TotalScore}"
-                                                Header="Total Score"/>
+                                                Header="Total Score"
+                                                IsReadOnly="True"/>
                         </DataGrid.Columns>
                     </DataGrid>
                 </StackPanel>
