--- a/GradeBook/GradeBook.Wpf/MVVM/Views/GradingView.xaml
+++ b/GradeBook/GradeBook.Wpf/MVVM/Views/GradingView.xaml
@@ -4,7 +4,8 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:GradeBook.Wpf.MVVM.Views"
-             xmlns:viewModels="clr-namespace:GradeBook.Wpf.MVVM.ViewModel"             
+             xmlns:viewModels="clr-namespace:GradeBook.Wpf.MVVM.ViewModel"      
+             xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.DataContext>
@@ -85,8 +86,9 @@
                                             <ItemsControl.ItemTemplate>
                                                 <DataTemplate>
                                                     <Border Width="70">
-                                                        <TextBox Text="{Binding Path=DoubleValue, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                                                 TextAlignment="Center"/>                                                        
+                                                        <TextBox Text="{Binding Path=PointsPerProblemValue, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                                                 TextAlignment="Center">
+                                                        </TextBox>
                                                     </Border>
                                                 </DataTemplate>
                                             </ItemsControl.ItemTemplate>
@@ -111,8 +113,7 @@
                 Grid.Column="0"
                 Margin="5,5,0,0"
                 Height="30"
-                Width="Auto"
-                IsEnabled="{Binding CalculateExamGradingEnabled}"/>
+                Width="Auto"/>
         <Button Content="Save Grading"
                 Command="{Binding SaveGradingCommand}"
                 Grid.Row="3"
