--- a/GradeBook/GradeBook.Wpf/MVVM/Views/StatisticView.xaml
+++ b/GradeBook/GradeBook.Wpf/MVVM/Views/StatisticView.xaml
@@ -2,12 +2,43 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:GradeBook.Wpf.MVVM.Views"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:viewModels="clr-namespace:GradeBook.Wpf.MVVM.ViewModel"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+
+    <UserControl.DataContext>
+        <viewModels:StatisticViewModel/>
+    </UserControl.DataContext>
     <Grid>
-        <Label>Statistic</Label>
+        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto"/>
+        </Grid.ColumnDefinitions>
+
+        <Button Content="Load Statistic Form"
+                Command="{Binding LoadStatisticFormCommand}"
+                Width="Auto"
+                Height="30"
+                Grid.Row="0"
+                Grid.Column="0"
+                Margin="5,5,0,0"/>
+
+        <WrapPanel Margin="5,5,0,0"
+                   Grid.Row="1"
+                   Grid.Column="0">
+            <DataGrid ItemsSource="{Binding GradeNumbers}"
+                      AutoGenerateColumns="False">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="Amount" Binding="{Binding Value, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                </DataGrid.Columns>
+            </DataGrid>
+            
+        </WrapPanel>
     </Grid>
 </UserControl>
